==> Youganghyeon/Drone_V26/Drone_ver/src/hw/sensor/BNO080/BNO080.c <==
#include "BNO080/BNO080.h"
#include "spi.h"
#include "Quaternion.h"
#define DEF_BNO080  DEF_HW_BNO080
#define CHIP_SELECT(BNO080)   HAL_GPIO_WritePin(BNO080_SPI_CS_PORT, BNO080_SPI_CS_PIN, RESET)
#define CHIP_DESELECT(BNO080) HAL_GPIO_WritePin(BNO080_SPI_CS_PORT, BNO080_SPI_CS_PIN, SET)

bool BNO080_waitForSPI(void)
{
    for(uint32_t counter = 0; counter < 0xffffffff; counter++)
    {
        if(HAL_GPIO_ReadPin(BNO080_INT_PORT, BNO080_INT_PIN) == GPIO_PIN_RESET)
        {
            return true;
        }
    }
    return false;
}

bool BNO080_receivePacket(BNO080_Packet_tbl* p_packet)
{
    uint8_t incoming;
    uint8_t full      = 0xFF;
    uint8_t zero_dummy = 0x00;

    if(HAL_GPIO_ReadPin(BNO080_INT_PORT, BNO080_INT_PIN) == GPIO_PIN_SET)
        return false;

    CHIP_SELECT(BNO080);

    for(int i = 0; i < 4; i++)
    {
        SPI_SendReceive(DEF_BNO080, &zero_dummy, &p_packet->shtpHeader[i], 1);
    }

    int16_t dataLength = ((uint16_t)p_packet->shtpHeader[1] << 8 | p_packet->shtpHeader[0]);
    dataLength &= 0x7fff;
    if(dataLength == 0)
    {
        CHIP_DESELECT(BNO080);
        return false;
    }
    dataLength -= 4;

    for(uint16_t dataSpot = 0; dataSpot < dataLength; dataSpot++)
    {
        SPI_SendReceive(DEF_BNO080, &full, &incoming, 1);
        if(dataSpot < MAX_PACKET_SIZE)
        {
            p_packet->shtpData[dataSpot] = incoming;
        }
    }

    CHIP_DESELECT(BNO080);
    return true;
}

void BNO080_parseInputReport(BNO080_tbl* p_sensor)
{
    BNO080_Packet_tbl* p_packet = &p_sensor->BNO080_Packet[p_sensor->read_idx];

    int16_t dataLength = ((uint16_t)p_packet->shtpHeader[1] << 8 | p_packet->shtpHeader[0]);
    dataLength &= ~(1 << 15);
    dataLength -= 4;

    p_sensor->timeStamp = ((uint32_t)p_packet->shtpData[4] << 24) |
                          ((uint32_t)p_packet->shtpData[3] << 16) |
                          ((uint32_t)p_packet->shtpData[2] <<  8) |
                          ((uint32_t)p_packet->shtpData[1] <<  0);

    uint8_t  status = p_packet->shtpData[7] & 0x03;
    uint16_t data1  = (uint16_t)p_packet->shtpData[10] << 8 | p_packet->shtpData[9];
    uint16_t data2  = (uint16_t)p_packet->shtpData[12] << 8 | p_packet->shtpData[11];
    uint16_t data3  = (uint16_t)p_packet->shtpData[14] << 8 | p_packet->shtpData[13];
    uint16_t data4  = 0;
    uint16_t data5  = 0;

    if(dataLength > 14)
        data4 = (uint16_t)p_packet->shtpData[16] << 8 | p_packet->shtpData[15];
    if(dataLength > 16)
        data5 = (uint16_t)p_packet->shtpData[18] << 8 | p_packet->shtpData[17];

    BNO080_Raw_tbl*      p_rawAccel    = &p_sensor->BNO080_Raw[rawAccel];
    BNO080_Raw_tbl*      p_rawLinAccel = &p_sensor->BNO080_Raw[rawLinAccel];
    BNO080_Raw_tbl*      p_rawGyro     = &p_sensor->BNO080_Raw[rawGyro];
    BNO080_Raw_tbl*      p_rawMag      = &p_sensor->BNO080_Raw[rawMag];
    BNO080_Quaternion_tbl* p_Quat      = &p_sensor->BNO080_Quat;

    switch(p_packet->shtpData[5])
    {
        case SENSOR_REPORTID_ACCELEROMETER:
            p_rawAccel->rawX    = data1;
            p_rawAccel->rawY    = data2;
            p_rawAccel->rawZ    = data3;
            p_rawAccel->accuracy = status;
            break;

        case SENSOR_REPORTID_LINEAR_ACCELERATION:
            p_rawLinAccel->rawX    = data1;
            p_rawLinAccel->rawY    = data2;
            p_rawLinAccel->rawZ    = data3;
            p_rawLinAccel->accuracy = status;
            break;

        case SENSOR_REPORTID_GYROSCOPE:
            p_rawGyro->rawX    = data1;
            p_rawGyro->rawY    = data2;
            p_rawGyro->rawZ    = data3;
            p_rawGyro->accuracy = status;
            break;

        case SENSOR_REPORTID_MAGNETIC_FIELD:
            p_rawMag->rawX    = data1;
            p_rawMag->rawY    = data2;
            p_rawMag->rawZ    = data3;
            p_rawMag->accuracy = status;
            break;

        case SENSOR_REPORTID_ROTATION_VECTOR:
        case SENSOR_REPORTID_GAME_ROTATION_VECTOR:
            p_Quat->rawQuatI            = data1;
            p_Quat->rawQuatJ            = data2;
            p_Quat->rawQuatK            = data3;
            p_Quat->rawQuatReal         = data4;
            p_Quat->rawQuatRadianAccuracy = data5;
            p_Quat->quatAccuracy        = status;
            break;

        case SENSOR_REPORTID_STEP_COUNTER:
            p_sensor->stepCount = data3;
            break;

        case SENSOR_REPORTID_STABILITY_CLASSIFIER:
            p_sensor->stabilityClassifier = p_packet->shtpData[5 + 4];
            break;

        case SENSOR_REPORTID_PERSONAL_ACTIVITY_CLASSIFIER:
            p_sensor->activityClassifier = p_packet->shtpData[5 + 5];
            for(uint8_t i = 0; i < 9; i++)
                p_sensor->activityConfidences[i] = p_packet->shtpData[11 + i];
            break;

        case SHTP_REPORT_COMMAND_RESPONSE:
            if(p_packet->shtpData[5 + 2] == COMMAND_ME_CALIBRATE)
                p_sensor->calibrationStatus = p_packet->shtpData[5 + 5];
            break;

        default:
            break;
    }
}
